# 2020-qsi1-well-oo

./: .gitignore  README.md  dune-project  package.json
doc/: kata.md  reason.md  setup.md
esy.lock/: index.json
lib/: Game.re  dune
test/: TestGame.re  dune
