;; dune file
(library
   (name SUT)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries tennis_kata.lib rely.lib)
   (modules (:standard \ TestTennisKata))
)
(executable
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (package tennis_kata)
  (name TestTennisKata)
  (public_name TestTennisKata.exe)
  (libraries SUT)
  (modules TestTennisKata)
)